# tensorkit-learn

./: .gitignore  CMakeLists.txt  README.md  README_UPDATED.md  bindings.cpp  build.sh  comprehensive_ml_test.py  project_structure.txt  tensor  tensor.cpp  tensor.h  tensor_test.py  test_data_regression.csv
bindings/: CMakeLists.txt  bindings.cpp  dl_bindings.cpp  lf_bindings.cpp  mlp_bindings.cpp
dataloader/: CMakeLists.txt  dataloader.cpp  dataloader.h  dl  dl_bindings.cpp  dl_test.cpp
ml_models/: glm.py  glm_test.py  kernel_func.py  link_functions.py  mlp.py  mlp_test.py  svm.py  svm_test.py
ml_models/link_functions/: CMakeLists.txt  lf_bindings.cpp  lf_test.py  link_functions.cpp  link_functions.h
ml_models/mlp/: mlp.cpp  mlp.h
ml_models/optimizers/: a.out  loss_functions.py
optimizers/: loss_functions  loss_functions.cpp  loss_functions.py  mse_test.py
tensor_cpp/: CMakeLists.txt  bindings.cpp  link  tensor.cpp  tensor.h  tensor_test  tensor_test.py
test_data/: test_data_classification.csv  test_data_no_header.csv
tests/: ce_test.py  dl_test.cpp  tensor_test.cpp  tensor_test.py
